# xredis

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  xredis++.cbp
src/: hiredis.h.bak  xRedisClient.cpp  xRedisClient_connection.cpp  xRedisClient_hashs.cpp  xRedisClient_keys.cpp  xRedisClient_lists.cpp  xRedisClient_pubsub.cpp  xRedisClient_sets.cpp  xRedisClient_sortedsets.cpp  xRedisClient_strings.cpp  xRedisClusterClient.cpp  xRedisPool.cpp
